src/test/ui/chalkify/lower_trait_higher_rank.stderr
error: program clause dump
  --> $DIR/lower_trait_higher_rank.rs:13:1
   |
LL | #[rustc_dump_program_clauses] //~ ERROR program clause dump
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: FromEnv(F: std::marker::Sized) :- FromEnv(Self: Foo<F>).
   = note: FromEnv(F: std::ops::Fn<(&'a (u8, u16),)>) :- FromEnv(Self: Foo<F>).
   = note: Implemented(Self: Foo<F>) :- FromEnv(Self: Foo<F>).
   = note: ProjectionEq(<F as std::ops::FnOnce<(&'a (u8, u16),)>>::Output == &'a u8) :- FromEnv(Self: Foo<F>).

error: aborting due to previous error

